force-app/main/default/objects/FieloCC__CommunicationCampaign__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>Communication Campaigns</relationshipLabel>
    <relationshipName>CommunicationCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>