force-app/main/default/objects/FieloCC__CommunicationCampaign__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Communication Campaigns</relationshipLabel>
    <relationshipName>CommunicationCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>