force-app/main/default/objects/FieloCC__CommunicationCampaign__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>FieloPLT__Promotion__c</referenceTo>
    <relationshipLabel>Communication Campaigns</relationshipLabel>
    <relationshipName>CommunicationCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>